fixed modal spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -321,6 +321,7 @@ tbody>tr:last-of-type {
 .modal-body {
 	height: 85%;
 	margin: 0 5%;
+	margin-bottom: 7.5%;
 	overflow-y: scroll;
 	position: relative;
 }
